--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Poker Timer</title>
-        <link rel="stylesheet" href="/css/main.css" />
-        <link rel="stylesheet" href="/css/modal.css" />
+        <link rel="stylesheet" href="./css/main.css" />
+        <link rel="stylesheet" href="./css/modal.css" />
         <script src="https://kit.fontawesome.com/069b9c272f.js" crossorigin="anonymous"></script>
     </head>
 
@@ -331,7 +331,7 @@
                 </section>
             </div>
         </div>
-        <script src="/js/js.js"></script>
+        <script src="./js/js.js"></script>
     </body>
 
     </html>
